--- a/123d.html
+++ b/123d.html
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">top responsive web page creator software</a></section><section class="mbr-gallery mbr-section mbr-section-nopadding mbr-slider-carousel mbr-after-navbar" id="gallery3-41" data-filter="false" style="background-color: rgb(0, 0, 0); padding-top: 6rem; padding-bottom: 1.5rem;">
+<section class="engine"><a rel="external" href="https://mobirise.com">easy responsive site development software</a></section><section class="mbr-gallery mbr-section mbr-section-nopadding mbr-slider-carousel mbr-after-navbar" id="gallery3-41" data-filter="false" style="background-color: rgb(0, 0, 0); padding-top: 6rem; padding-bottom: 1.5rem;">
     <!-- Filter -->
     
 
@@ -208,12 +208,12 @@
             <div class="col-sm-8">
                 <div class="row">
                     <div class="col-sm-6">
-                        <p><strong>Address</strong><br>21386sw 112ave<br><br>
+                        <p><strong>Address</strong><br>15015 SW 24th St, Miami, FL 33185<br><br>
 <strong>Contacts</strong><br>
 Email:slugones@miamiartsstudio.com<br>
-Phone: (786)-397-1094<br><br></p>
+Phone: (305)-485-2323<br><br></p>
                     </div>
-                    <div class="col-sm-6"><p class="mbr-contacts__text"><strong>Links</strong></p><ul class="mbr-contacts__list"><li><a href="intro.html" class="text-white">Susana Lugones</a></li><li><a href="photoshopgallery.html" class="text-white">Photoshop Gallery</a></li><li><a href="index.html" class="text-white">Landing Page</a></li></ul></div>
+                    <div class="col-sm-6"><p class="mbr-contacts__text"><strong>Links</strong></p><ul class="mbr-contacts__list"><p><span style="font-size: 14px; line-height: 25px;">Continuation</span></p><p><br></p><p><a href="photoshopgallery.html" class="text-white" style="font-size: 0.875rem; line-height: 1.8; background-color: rgb(0, 0, 0);">Photoshop Gallery</a></p><p><br></p><p><a href="index.html" class="text-white" style="font-size: 0.875rem; line-height: 1.8; background-color: rgb(0, 0, 0);">Landing Page</a></p></ul></div>
                 </div>
             </div>
             <div class="col-sm-4" data-form-type="formoid">
@@ -221,7 +221,7 @@ Phone: (786)-397-1094<br><br></p>
                     <div hidden="" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="MiFAS8J/CpSW/ceLucSQp2qIDgytv6i92U/q//NhdMt64g0PYwRdpDBzmSg36Pl8TCoYmEST+gP7YILfasrqiJVopsA3d6fgxwiY6ZUQWHr2/VIGIRqcXLHtA9EZnCoY" data-form-email="true">
+                    <input type="hidden" value="YKyVuPG53XL6uYvnbEneZC5t7nEQYRdyveN76bLBf9MFu/joGYtrtIPhwXzrxr7dqI1CBNOk0KOLRy+jDYL1XmMWTNY2AOZdMM4qQXzlr73WhCdUZMNBgl7Mgbo5uc1A" data-form-email="true">
                     
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-4m-email">Email<span class="form-asterisk">*</span></label>
