--- a/MDCPS Logo.html
+++ b/MDCPS Logo.html
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">top web site development software download</a></section><section class="mbr-gallery mbr-section mbr-section-nopadding mbr-slider-carousel mbr-after-navbar" id="gallery3-8q" data-filter="false" style="background-color: rgb(0, 0, 0); padding-top: 3rem; padding-bottom: 1.5rem;">
+<section class="engine"><a rel="external" href="https://mobirise.com">best responsive web page generator</a></section><section class="mbr-gallery mbr-section mbr-section-nopadding mbr-slider-carousel mbr-after-navbar" id="gallery3-8q" data-filter="false" style="background-color: rgb(0, 0, 0); padding-top: 3rem; padding-bottom: 1.5rem;">
     <!-- Filter -->
     
 
@@ -136,12 +136,12 @@
             <div class="col-sm-8">
                 <div class="row">
                     <div class="col-sm-6">
-                        <p><strong>Address</strong><br>21386sw 112ave<br><br>
+                        <p><strong>Address</strong><br>15015 SW 24th St, Miami, FL 33185<br><br>
 <strong>Contacts</strong><br>
 Email:slugones@miamiartsstudio.com<br>
-Phone: (786)-397-1094<br><br></p>
+Phone: (305)-485-2323<br><br></p>
                     </div>
-                    <div class="col-sm-6"><p class="mbr-contacts__text"><strong>Links</strong></p><ul class="mbr-contacts__list"><li><a href="intro.html" class="text-white">Susana Lugones</a></li><li><a href="photoshopgallery.html" class="text-white">Photoshop Gallery</a></li><li><a href="index.html" class="text-white">Landing Page</a></li></ul></div>
+                    <div class="col-sm-6"><p class="mbr-contacts__text"><strong>Links</strong></p><ul class="mbr-contacts__list"><p><span style="font-size: 14px; line-height: 25px;">Continuation</span></p><p><br></p><p><a href="photoshopgallery.html" class="text-white" style="font-size: 0.875rem; line-height: 1.8; background-color: rgb(0, 0, 0);">Photoshop Gallery</a></p><p><br></p><p><a href="index.html" class="text-white" style="font-size: 0.875rem; line-height: 1.8; background-color: rgb(0, 0, 0);">Landing Page</a></p></ul></div>
                 </div>
             </div>
             <div class="col-sm-4" data-form-type="formoid">
@@ -149,7 +149,7 @@ Phone: (786)-397-1094<br><br></p>
                     <div hidden="" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="6fwLUp2PcYY9Wf9vU5V4CD3wcAK7FVU5YCiE87E0LIt3gODRQyvlQ6xBEovbKQ68Vpr++mFuD4+b7UWrfrRZqwHyXnRLBatjMmhMHpdo2bKzutm9i8gbDZInr8V85Agg" data-form-email="true">
+                    <input type="hidden" value="D6XHB2LH3ND0SgE62X2lk+yRzR85oZ/OgxS3n61bpEQiHhw/osnLfoVvl00mBUntmA2XLNr6lKC+q1Ilf++P5jA9eEEGWC6bhJTolQpArWKM/x0D8SQATwWFmCABY4Mz" data-form-email="true">
                     
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-8p-email">Email<span class="form-asterisk">*</span></label>
