--- a/Paths & End Points.html
+++ b/Paths & End Points.html
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">simple web page building software</a></section><section class="mbr-gallery mbr-section mbr-section-nopadding mbr-slider-carousel mbr-after-navbar" id="gallery3-96" data-filter="false" style="background-color: rgb(0, 0, 0); padding-top: 4.5rem; padding-bottom: 1.5rem;">
+<section class="engine"><a rel="external" href="https://mobirise.com">best wysiwyg web site building software download</a></section><section class="mbr-gallery mbr-section mbr-section-nopadding mbr-slider-carousel mbr-after-navbar" id="gallery3-96" data-filter="false" style="background-color: rgb(0, 0, 0); padding-top: 4.5rem; padding-bottom: 1.5rem;">
     <!-- Filter -->
     
 
@@ -196,12 +196,12 @@
             <div class="col-sm-8">
                 <div class="row">
                     <div class="col-sm-6">
-                        <p><strong>Address</strong><br>21386sw 112ave<br><br>
+                        <p><strong>Address</strong><br>15015 SW 24th St, Miami, FL 33185<br><br>
 <strong>Contacts</strong><br>
 Email:slugones@miamiartsstudio.com<br>
-Phone: (786)-397-1094<br><br></p>
+Phone: (305)-485-2323<br><br></p>
                     </div>
-                    <div class="col-sm-6"><p class="mbr-contacts__text"><strong>Links</strong></p><ul class="mbr-contacts__list"><li><a href="intro.html" class="text-white">Susana Lugones</a></li><li><a href="photoshopgallery.html" class="text-white">Photoshop Gallery</a></li><li><a href="index.html" class="text-white">Landing Page</a></li></ul></div>
+                    <div class="col-sm-6"><p class="mbr-contacts__text"><strong>Links</strong></p><ul class="mbr-contacts__list"><p><span style="font-size: 14px; line-height: 25px;">Continuation</span></p><p><br></p><p><a href="photoshopgallery.html" class="text-white" style="font-size: 0.875rem; line-height: 1.8; background-color: rgb(0, 0, 0);">Photoshop Gallery</a></p><p><br></p><p><a href="index.html" class="text-white" style="font-size: 0.875rem; line-height: 1.8; background-color: rgb(0, 0, 0);">Landing Page</a></p></ul></div>
                 </div>
             </div>
             <div class="col-sm-4" data-form-type="formoid">
@@ -209,7 +209,7 @@ Phone: (786)-397-1094<br><br></p>
                     <div hidden="" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="kmwngPdVFzrH7Gtd7H/ndYn9a8HTOHZBAmqlMb/6KcF7w2dNVyx6hvhFfsl6RZmwmq+x86M/VhZFanBWW3bE0vKVejerS9YUxoO5s1q3v8TD9mBpDO5P3yFsVpFS+KAb" data-form-email="true">
+                    <input type="hidden" value="cdY3KYQocbNJ9dnJjQBH/QE+zz2bSet+swvcfqNoVjckHhqB0xt3kBOE+vMxGkGPFDwRBrP1GbVZqw1ZsGjHQgxRxNrwxHjy6yldnpt0BBoJE7eX6RsV4VJQOC8xqnT8" data-form-email="true">
                     
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-95-email">Email<span class="form-asterisk">*</span></label>
