--- a/Recording Actions.html
+++ b/Recording Actions.html
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">easy mobile web site development software</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-8b" style="background-color: rgb(199, 199, 199); padding-top: 80px; padding-bottom: 20px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">simple responsive web page maker</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-8b" style="background-color: rgb(199, 199, 199); padding-top: 80px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -651,12 +651,12 @@
             <div class="col-sm-8">
                 <div class="row">
                     <div class="col-sm-6">
-                        <p><strong>Address</strong><br>21386sw 112ave<br><br>
+                        <p><strong>Address</strong><br>15015 SW 24th St, Miami, FL 33185<br><br>
 <strong>Contacts</strong><br>
 Email:slugones@miamiartsstudio.com<br>
-Phone: (786)-397-1094<br><br></p>
+Phone: (305)-485-2323<br><br></p>
                     </div>
-                    <div class="col-sm-6"><p class="mbr-contacts__text"><strong>Links</strong></p><ul class="mbr-contacts__list"><li><a href="intro.html" class="text-white">Susana Lugones</a></li><li><a href="photoshopgallery.html" class="text-white">Photoshop Gallery</a></li><li><a href="index.html" class="text-white">Landing Page</a></li></ul></div>
+                    <div class="col-sm-6"><p class="mbr-contacts__text"><strong>Links</strong></p><ul class="mbr-contacts__list"><p><span style="font-size: 14px; line-height: 25px;">Continuation</span></p><p><br></p><p><a href="photoshopgallery.html" class="text-white" style="font-size: 0.875rem; line-height: 1.8; background-color: rgb(0, 0, 0);">Photoshop Gallery</a></p><p><br></p><p><a href="index.html" class="text-white" style="font-size: 0.875rem; line-height: 1.8; background-color: rgb(0, 0, 0);">Landing Page</a></p></ul></div>
                 </div>
             </div>
             <div class="col-sm-4" data-form-type="formoid">
@@ -664,7 +664,7 @@ Phone: (786)-397-1094<br><br></p>
                     <div hidden="" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="NpI17E2YUFI+PSytxAij2cj22jBpnQRVMoTKQ6F4hAcoIEo01FMsyvScth1hBLcRN0jPuplSuFpfFEJxu8khl8V6ExwpTzRLhiZ0BQqcu+rnAoNZ84/4/wSFJheEOzT3" data-form-email="true">
+                    <input type="hidden" value="YzDdQiKpqI0mLfHz1lRtZ9kAQ7Gx+Uq2f5r54t5CFVXslYHr8+mUIbTEsq8wDhdm5/nizbInYc82TLmwh0jybuCwY+nSQdY/yx76B6K5hF5j038Vk5n8kwjJwE6l6jMb" data-form-email="true">
                     
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-87-email">Email<span class="form-asterisk">*</span></label>
