--- a/intro.html
+++ b/intro.html
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">free html web page maker software download</a></section><section class="mbr-section mbr-section__container mbr-after-navbar" id="buttons1-c" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 40px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">drag and drop web builder</a></section><section class="mbr-section mbr-section__container mbr-after-navbar" id="buttons1-c" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 40px;">
 
     <div class="container">
         <div class="row">
@@ -191,7 +191,7 @@
 Email:slugones@miamiartsstudio.com<br>
 Phone: (305)-485-2323<br><br></p>
                     </div>
-                    <div class="col-sm-6"><p class="mbr-contacts__text"><strong>Links</strong></p><ul class="mbr-contacts__list"><li><a href="intro.html" class="text-white">Susana Lugones</a></li><li><a href="photoshopgallery.html" class="text-white">Photoshop Gallery</a></li><li><a href="index.html" class="text-white">Landing Page</a></li></ul></div>
+                    <div class="col-sm-6"><p class="mbr-contacts__text"><strong>Links</strong></p><ul class="mbr-contacts__list"><p><span style="font-size: 14px; line-height: 25px;">Continuation</span></p><p><br></p><p><a href="photoshopgallery.html" class="text-white" style="font-size: 0.875rem; line-height: 1.8; background-color: rgb(0, 0, 0);">Photoshop Gallery</a></p><p><br></p><p><a href="index.html" class="text-white" style="font-size: 0.875rem; line-height: 1.8; background-color: rgb(0, 0, 0);">Landing Page</a></p></ul></div>
                 </div>
             </div>
             <div class="col-sm-4" data-form-type="formoid">
@@ -199,7 +199,7 @@ Phone: (305)-485-2323<br><br></p>
                     <div hidden="" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="MTERGbF50VYjvduVcdRNS9/Vx/KhUozCy9vPAmecekIdbUvKdh7q8Z6meNS9jNZcbTNubkWq9SgBIR7o2UXb8G5m4sFtb3stZdzEmA3kluAz/YsCY2cZ1YLTquWdOHLR" data-form-email="true">
+                    <input type="hidden" value="VwfesMi1b4wnEX9pyOamPz1dfREh8alAZRvUeVurtGmqk62DDTKpB1KJFU7hYURcqfDJmkW52BAhJ8J6emQpoRK0cMT9tvhASb4jrX0+u/iqOdUljPF5YWlJOMAVWX1L" data-form-email="true">
                     
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-4m-email">Email<span class="form-asterisk">*</span></label>
