--- a/photoshop.html
+++ b/photoshop.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">free html site builder software download</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow mbr-after-navbar" id="header1-4v" style="background-image: url(assets/images/mbr-7-2000x1333.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">top mobile website design software</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow mbr-after-navbar" id="header1-4v" style="background-image: url(assets/images/mbr-7-2000x1333.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(0, 0, 0);"></div>
 
@@ -206,12 +206,12 @@
             <div class="col-sm-8">
                 <div class="row">
                     <div class="col-sm-6">
-                        <p><strong>Address</strong><br>21386sw 112ave<br><br>
+                        <p><strong>Address</strong><br>15015 SW 24th St, Miami, FL 33185<br><br>
 <strong>Contacts</strong><br>
 Email:slugones@miamiartsstudio.com<br>
-Phone: (786)-397-1094<br><br></p>
+Phone: (305)-485-2323<br><br></p>
                     </div>
-                    <div class="col-sm-6"><p class="mbr-contacts__text"><strong>Links</strong></p><ul class="mbr-contacts__list"><li><a href="intro.html" class="text-white">Susana Lugones</a></li><li><a href="photoshopgallery.html" class="text-white">Photoshop Gallery</a></li><li><a href="index.html" class="text-white">Landing Page</a></li></ul></div>
+                    <div class="col-sm-6"><p class="mbr-contacts__text"><strong>Links</strong></p><ul class="mbr-contacts__list"><p><span style="font-size: 14px; line-height: 25px;">Continuation</span></p><p><br></p><p><a href="photoshopgallery.html" class="text-white" style="font-size: 0.875rem; line-height: 1.8; background-color: rgb(0, 0, 0);">Photoshop Gallery</a></p><p><br></p><p><a href="index.html" class="text-white" style="font-size: 0.875rem; line-height: 1.8; background-color: rgb(0, 0, 0);">Landing Page</a></p></ul></div>
                 </div>
             </div>
             <div class="col-sm-4" data-form-type="formoid">
@@ -219,7 +219,7 @@ Phone: (786)-397-1094<br><br></p>
                     <div hidden="" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="0Kze4JC/rGSLNxEzRDJq8GYeXVfFURUaAtxNzwdC+u+cUf2LHrZWKKLYkUyiZhgUMOpZeYQ/ctLkUsEI31E2W6RvCN5mhYyqpixoyIXrllJRbtxVHOMK1jHdDFjsjTRj" data-form-email="true">
+                    <input type="hidden" value="eIooIxgx+TUCP1wlwoDByAAfDswQZ+fd6JDAufGGbiz48edraWDrpDbDIjB8E8g98HwKVFjMD/n/civ2RGX0C8NQ4V5ClclK01DkM+K3mcLqhHXG7QC6+cWZPv1WAe/f" data-form-email="true">
                     
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-4m-email">Email<span class="form-asterisk">*</span></label>
