--- a/powerpoint.html
+++ b/powerpoint.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">easy responsive website builder</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow mbr-after-navbar" id="header1-6l" style="background-image: url(assets/images/mbr-2000x1338.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">easy wysiwyg website building</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow mbr-after-navbar" id="header1-6l" style="background-image: url(assets/images/mbr-2000x1338.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.9; background-color: rgb(0, 0, 0);"></div>
 
@@ -86,12 +86,12 @@
             <div class="col-sm-8">
                 <div class="row">
                     <div class="col-sm-6">
-                        <p><strong>Address</strong><br>21386sw 112ave<br><br>
+                        <p><strong>Address</strong><br>15015 SW 24th St, Miami, FL 33185<br><br>
 <strong>Contacts</strong><br>
 Email:slugones@miamiartsstudio.com<br>
-Phone: (786)-397-1094<br><br></p>
+Phone: (305)-485-2323<br><br></p>
                     </div>
-                    <div class="col-sm-6"><p class="mbr-contacts__text"><strong>Links</strong></p><ul class="mbr-contacts__list"><li><a href="intro.html" class="text-white">Susana Lugones</a></li><li><a href="photoshopgallery.html" class="text-white">Photoshop Gallery</a></li><li><a href="index.html" class="text-white">Landing Page</a></li></ul></div>
+                    <div class="col-sm-6"><p class="mbr-contacts__text"><strong>Links</strong></p><ul class="mbr-contacts__list"><p><span style="font-size: 14px; line-height: 25px;">Continuation</span></p><p><br></p><p><a href="photoshopgallery.html" class="text-white" style="font-size: 0.875rem; line-height: 1.8; background-color: rgb(0, 0, 0);">Photoshop Gallery</a></p><p><br></p><p><a href="index.html" class="text-white" style="font-size: 0.875rem; line-height: 1.8; background-color: rgb(0, 0, 0);">Landing Page</a></p></ul></div>
                 </div>
             </div>
             <div class="col-sm-4" data-form-type="formoid">
@@ -99,7 +99,7 @@ Phone: (786)-397-1094<br><br></p>
                     <div hidden="" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="ZdmBcbRg4bSfsxHPRwT9jKnNvnIitg0boZ8bWAc2J37TW9OEMFhJXgu90qUpVlTBOTlYefvB3PdpMmnk3hC02C4u1LkTf7UAuc46yPFVqyMpJG/wkcEocicvzRSOl/V8" data-form-email="true">
+                    <input type="hidden" value="l7mf3QhJx/KyLg9ApzIE5GPPbNV2KbjU7QnkVw/ZhmCvl7xxdiyOkAH5yUdc8MT3/eRw/yWnP2tPNd6DM3wHqwNZsBUkyPtNXD9u1KBiOCg9ma9OZaJTq4dBEU/Hns3N" data-form-email="true">
                     
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-4m-email">Email<span class="form-asterisk">*</span></label>
