--- a/project.html
+++ b/project.html
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">drag and drop site generator software</a></section><section class="mbr-gallery mbr-section mbr-section-nopadding mbr-slider-carousel mbr-after-navbar" id="gallery1-66" data-filter="false" style="background-color: rgb(255, 255, 255); padding-top: 6rem; padding-bottom: 0rem;">
+<section class="engine"><a rel="external" href="https://mobirise.com">html website building software</a></section><section class="mbr-gallery mbr-section mbr-section-nopadding mbr-slider-carousel mbr-after-navbar" id="gallery1-66" data-filter="false" style="background-color: rgb(255, 255, 255); padding-top: 6rem; padding-bottom: 0rem;">
     <!-- Filter -->
     
 
@@ -542,12 +542,12 @@
             <div class="col-sm-8">
                 <div class="row">
                     <div class="col-sm-6">
-                        <p><strong>Address</strong><br>21386sw 112ave<br><br>
+                        <p><strong>Address</strong><br>15015 SW 24th St, Miami, FL 33185<br><br>
 <strong>Contacts</strong><br>
 Email:slugones@miamiartsstudio.com<br>
-Phone: (786)-397-1094<br><br></p>
+Phone: (305)-485-2323<br><br></p>
                     </div>
-                    <div class="col-sm-6"><p class="mbr-contacts__text"><strong>Links</strong></p><ul class="mbr-contacts__list"><li><a href="intro.html" class="text-white">Susana Lugones</a></li><li><a href="photoshopgallery.html" class="text-white">Photoshop Gallery</a></li><li><a href="index.html" class="text-white">Landing Page</a></li></ul></div>
+                    <div class="col-sm-6"><p class="mbr-contacts__text"><strong>Links</strong></p><ul class="mbr-contacts__list"><p><span style="font-size: 14px; line-height: 25px;">Continuation</span></p><p><br></p><p><a href="photoshopgallery.html" class="text-white" style="font-size: 0.875rem; line-height: 1.8; background-color: rgb(0, 0, 0);">Photoshop Gallery</a></p><p><br></p><p><a href="index.html" class="text-white" style="font-size: 0.875rem; line-height: 1.8; background-color: rgb(0, 0, 0);">Landing Page</a></p></ul></div>
                 </div>
             </div>
             <div class="col-sm-4" data-form-type="formoid">
@@ -555,7 +555,7 @@ Phone: (786)-397-1094<br><br></p>
                     <div hidden="" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="EbCEA0EhyucS29Gcwlio81CMvSp4J3VFZV5IjtOHzUzcIMTVwhkiwCW0a+C5voDjpvkgpCHloWPycyvYssw7lqz/UpvAkgMhNCL3wLbuejvThx4wVIUnTIeZUKeReyUw" data-form-email="true">
+                    <input type="hidden" value="fWIMchCfqhXEp6A6/y9UK9M1B1gBr9cSWnzc+bggkurTObqKnnYemWUWIwOf5k2Yigedx/wKSs4jzID6N2bpXh6oSOhv3/DbUmWlznKe9OegWVlOla/7x97h3XvdAoBo" data-form-email="true">
                     
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-61-email">Email<span class="form-asterisk">*</span></label>
